Добавлен ReceptionChangeTest, покрытие валидации ReceptionChange